解决token问题